--- a/music-library-fe/public/index.html
+++ b/music-library-fe/public/index.html
@@ -40,4 +40,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <footer id = 'footer'> 
+    copyright 2022, j bizzle fo shizzle
+  </footer>
 </html>
