--- a/music-library-fe/public/index.html
+++ b/music-library-fe/public/index.html
@@ -1,4 +1,6 @@
+
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -26,6 +28,10 @@
     -->
     <title>React App</title>
   </head>
+    <div class="header" role="banner">
+      <h1>Welcome to Jaymie's Music Library</h1>
+    </div>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
